# Destiny2_QQBot

./: .env.dev  .gitignore  bot.py  pyproject.toml
plugins/destiny2bot/: __init__.py  config.py
plugins/destiny2bot/modules/: __init__.py  lore.py  perk.py
